[package]
name = "pov_stereo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.7", features = ["derive"] }
ezbrowsergameserver = "0.2.1"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["macros"] }
